# flashinfer-bench

examples/kernel_generator/: .env.example  RAG_helper.py  kernel_generator.py  main.py  prompts_router.py  utils.py
flashinfer_bench/agents/RAG/: build_graph.py  build_graph_by_keyword.py  build_vector_database.py  preprocessor.py  visualize_graph.py  visualizer2.py  visualizer3.py
flashinfer_bench/agents/RAG/knowledge_base/: cuda_knowledge_graph.json  cuda_knowledge_graph.pkl  entities.json
flashinfer_bench/agents/RAG/visualizations/: cuda_knowledge_graph.html
flashinfer_bench/agents/test_solution/: build_mla_low_level.py
flashinfer_bench/agents/test_solution/MLA_Kernel/: CMakeLists.txt  main.cpp  mla_kernel.cu  mla_kernel.h  setup.py
flashinfer_trace_test/: README.md  definition.md  solution.md  trace.md
flashinfer_trace_test/blob/workloads/mla_paged/mla_paged_decode_h16_ckv512_kpe64_ps1/: mla_meta_00f4fce21b47839b631716180fcfab90.safetensors  mla_meta_027699d12a3a929fb628224ca7c8551e.safetensors  mla_meta_02bac39366452f5b29bf00dc9a54f484.safetensors  mla_meta_02fcfed278eb08735ccea46e83682a95.safetensors  mla_meta_030af7d24a4ee96f73663475abc84c60.safetensors  mla_meta_03344afd9b1ffd25c6e78c38ef657fc6.safetensors  mla_meta_035d1ffdf1ab16c374493fbb2c81c8f4.safetensors  mla_meta_0471b3610c455514fd3fe4a0d05f664b.safetensors  mla_meta_048319f2f170b5683eef7a07288e53d0.safetensors  mla_meta_0582ce3b84c4fa907673686c445b7aa3.safetensors  mla_meta_0585f6be0f0622251d574f04e1538645.safetensors  mla_meta_05b8df18b0a8f634615a7007985e49b7.safetensors  mla_meta_0610c6724abfd724b1f70b3128b72acd.safetensors  mla_meta_073b7228b002668132fccf5d1a132a0c.safetensors  mla_meta_0778aff90a29884754dd8a128cddbe51.safetensors  mla_meta_07c1eccbadab38d43cd39f438c7cca32.safetensors  mla_meta_07c31c3d65b08692eb38d23f79f3a21a.safetensors  mla_meta_08060314c6002ffbdd8371c7df1ebdac.safetensors  mla_meta_0883b0b4730c78c167ef5b9fe1bedb94.safetensors  mla_meta_09076a098aec77ab0630e322da615a31.safetensors  mla_meta_0941da17c8a66ed2cddc05f85ea51848.safetensors  mla_meta_0acd8258788741435faad963563a06b5.safetensors  mla_meta_0ba3a01cfc5710dcd0fd8c60ce8c295b.safetensors  mla_meta_0bb0ed6b560c58329be2348d89337436.safetensors  mla_meta_0c69eeb2c1ac8070a5edeb1827179b79.safetensors  mla_meta_0cc0a8e77e085cb4e9de2b42c7414500.safetensors  mla_meta_0cd4125a9f7220baec4f949e8ab86cf1.safetensors  mla_meta_0cf02437029d0031a32911ab011d1d7f.safetensors  mla_meta_0d8ad4f1af7fad223887b0038ff557f8.safetensors  mla_meta_0e45eb2f444c3810b323bb1b777e0257.safetensors  mla_meta_0f7470125f4f142ef61cf1f626f57dad.safetensors  mla_meta_0f8baf92c5bf1b8f777d9997c443012f.safetensors  mla_meta_0ff9833a8de91db7929f6841f79abf8f.safetensors  mla_meta_105bc336943d7c407d9a322d18a50562.safetensors  mla_meta_11d6bd6c6bde4e2f69cb1c3c1fb6ab9a.safetensors  mla_meta_131a32197b6891e66171ebe9f0807f33.safetensors  (+386 more)
flashinfer_trace_test/definitions/mla_paged/: mla_paged_decode_h16_ckv512_kpe64_ps1.json  mla_paged_decode_h16_ckv512_kpe64_ps64.json  mla_paged_prefill_causal_h16_ckv512_kpe64_ps1.json  mla_paged_prefill_causal_h16_ckv512_kpe64_ps64.json
flashinfer_trace_test/solutions/mla_paged/mla_paged_decode_h16_ckv512_kpe64_ps1/: gemini-3-flash-preview_mla_paged_decode_h16_ckv512_kpe64_ps1_cuda_optimized_r3_c0.json  rag_log.json
flashinfer_trace_test/traces/mla_paged/: mla_paged_decode_h16_ckv512_kpe64_ps1.jsonl  mla_paged_prefill_causal_h16_ckv512_kpe64_ps1.jsonl
flashinfer_trace_test/workloads/mla_paged/: mla_paged_decode_h16_ckv512_kpe64_ps1.jsonl  mla_paged_prefill_causal_h16_ckv512_kpe64_ps1.jsonl
(+594 files in other folders)
